--- a/assets/css/layouts.css
+++ b/assets/css/layouts.css
@@ -2750,12 +2750,12 @@
 
 /* Campus Impact Carousel */
 .campus-carousel {
-  margin-bottom: var(--space-12);
+  margin-bottom: var(--space-6);
   overflow: clip;
   padding-block: 10px;
-  margin-block: -10px;
   mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
   -webkit-mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
+  position: relative;
 }
 
 .campus-carousel__track {
